# dialectic

./: .gitignore  README.md  chain.py  chain_coordinator.py  claude_config.py  coordination_prompt.py  project_coordinator.py  pyproject.toml  registry.py
janitor/: __init__.py  injection.py  janitor_cli.py  jsonl_reader.py  types.py
roles/: architect.txt  builder.txt  contrarian.txt  investigator.txt  reviewer.txt  skeptic.txt  strategist.txt  synthesizer.txt  thinker.txt
tests/: conftest.py  test_chain.py  test_chain_cli.py  test_chain_cli_attach.py  test_chain_coordinator.py  test_chain_coordinator_wiring.py  test_chain_leak_guard.py  test_claude_config.py  test_claude_md_coordination_wiring.py  test_cli_max_chains.py  test_coordination_integration.py  test_coordination_prompt.py  test_directory_browser.py  test_extraction.py  test_injection.py  test_integration_multichain.py  test_janitor_cli.py  test_jsonl_multichain.py  test_jsonl_reader.py  test_loop_sacredness.py  test_pane_reach_subprocess.py  test_pane_terminal_directive.py  test_picker_markup.py  test_preflight.py  test_project_coordinator.py  test_project_coordinator_crossproc.py  test_project_view.py  test_recap.py  test_registry.py  test_registry_cli.py  test_role_wiring.py  test_server.py  test_smoke.py  test_types.py  test_wait_and_extract.py
ui/: __init__.py  directory_browser.py  project_view.py  server.py
ui/static/: index.html
